# epd-photoframe-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  NOTICE  PLAN.md  README.md  THIRD_PARTY_LICENSES.md  TODO.md  config.example.toml  config.minimal.toml
.github/workflows/: ci.yml
LICENSES/: WeatherIcons-Regular.ttf.txt
cargo-about/: about.hbs  about.toml
cargo-deny/: deny.toml
licensing/: about.hbs  about.toml  deny.toml
src/: album.rs  background.rs  battery_indicator.rs  color.rs  config.rs  degraded.rs  dither.rs  draw.rs  immich.rs  infobox.rs  main.rs  mqtt.rs  overlay.rs  palette_image.rs  screen_state.rs  test_snapshot.rs  weather.rs
src/overlays/: battery_indicator.rs  drawable.rs  infobox.rs  mod.rs  traits.rs
