[package]
name = "immich-ink-frame"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
image = "0.25"
epd-dither = { git = "https://github.com/Frans-Willem/epd-dither", default-features = false, features = ["image"] }
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
png = "0.18"
rand = "0.9"
